web/static/web/style.css
:root {
  --dark-blue: hsl(229, 71%, 33%);
  --medium-blue: hsl(198, 70%, 26%);
  --medium-blue-shadow: hsla(198, 70%, 26%, 0.3);
  --light-blue: hsl(206, 75%, 42%);
  --white-blue: #bce6f9;
  --lighter-blue: hsl(199, 83%, 86%);
  --orange: hsl(24, 69%, 46%);
  --dark-orange: hsl(24, 77%, 35%);
  --green: hsl(79, 48%, 47%);
  --dark-gray: hsl(0, 0%, 30%);
  --light-gray: hsl(0, 0%, 60%);
  --lighter-gray: hsl(0, 0%, 80%);
  --table-border-color: var(--light-gray);
  --background: white;
}

.dark-blue {
  background-color: var(--dark-blue);
}
.medium-blue {
  background-color: var(--medium-blue);
}
.light-blue {
  background-color: var(--light-blue);
}
.orange {
  color: var(--orange);
}
body {
  margin: 0 auto;
  padding: 10px 0px 0px 0px;
  background-color: var(--background);
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-areas: "header" "main" "footer";
}
header {
  margin-left: 80px;
  margin-right: 80px;
  padding-bottom: 10px;
  grid-area: header;
  display: grid;
  gap: 5px;
  grid-template-areas:
    "left top-right"
    "left mid-right"
    "bottom bottom";
}
.cjtf_logo {
  grid-area: left;
}
header .cjtf_logo img {
  width: 500px;
}
header .search {
  grid-area: top-right;
  justify-self: end;
  align-self: center;
  white-space: nowrap;
}
header .search input {
  width: 253px;
  font-family: "Roboto Thin";
  font-size: .9rem;
  border: 1px solid var(--lighter-gray);
}
header .search form {
  display: inline;
}
header .search img {
  vertical-align: middle;
}
header .logos {
  grid-area: mid-right;
  justify-self: end;
}
header .logos img {
  width: 130px;
}
nav {
  grid-area: bottom;
  margin-top: 11px;
  padding-bottom: 5px;
  margin-left: -7px;
  /* this hides the buttons that close and open the menu in responsive mode */
}
nav button {
  display: none;
}
nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
nav ul li {
  display: inline;
  padding-right: 7px;
  font-size: 1.3rem;
  position: relative;
  padding-bottom: 1rem;
  padding-left: 0;
}

nav ul li:not(:last-child):not(:first-child):after {
  content: "|";
  color: var(--light-gray);
  padding-left: 6px;
}
nav ul li:hover > ul {
  visibility: visible;
  opacity: 0.9;
  display: block;
}
nav ul li ul {
  background-color: var(--background);
  visibility: hidden;
  min-width: 15rem;
  position: absolute;
  padding: 1rem 0.5rem 0.5rem 0.5rem;
  left: 0;
  display: none;
  z-index: 11;
}
nav ul li ul li:not(:last-child):not(:first-child):after {
  content: none;
}
nav a {
  text-decoration: none;
  color: var(--medium-blue);
}
nav a:hover {
  color: var(--orange);
}
nav a.active {
  color: var(--medium-blue);
  font-weight: bold;
}
nav a.active:hover {
  color: var(--medium-blue);
}
main {
  grid-area: main;
  color: white;
}
main a {
  text-decoration: underline;
  font-weight: bold;
  color: var(--white-blue);
}
main a:hover {
  color: white;
}
main.home {
  background-color: transparent;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr 1fr;
  grid-template-areas: "mission mission" "col1 col2";
}
main.home .col1 {
  background-color: var(--medium-blue);
}
main.home .col1 ul {
  margin-bottom: 2rem;
}
main.home .col2 {
  background-color: var(--orange);
}
main.home .mission {
  grid-area: mission;
  position: relative;
  max-width: 100vw;
}
main.home .mission #heroimage img {
  width: 100%;
  max-width: 100vw;
}
main.home .mission-text {
  position: absolute;
  display: block;
  z-index: 10;
  bottom: 0;
  left: 0;
  padding: 10px 10px 10px 80px;
  font-size: 1.4rem;
  /* I don't know why, but the padding is getting added to the width, so remove it */
  width: calc(100% - 90px);
  background: linear-gradient(90deg, var(--dark-gray), 65%, hsla(198, 70%, 26%, 0));
}
main.default {
  background-color: var(--medium-blue);
  box-shadow: 0px -5px 25px 25px var(--medium-blue-shadow);
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-areas: "col1 col2";
  padding-bottom: 20px;
}
main.default .col2 {
  padding-top: 3rem;
}
main.default .map {
  position: relative;
  width: 100%;
  padding-top: 85%;
}
main.default .map iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
main .col1 {
  grid-area: col1;
  padding: 0 20px 10px 80px;
}
main .col2 {
  grid-area: col2;
  padding: 0 20px 10px 80px;
}
main .full {
  grid-area: span 1 / span 2;
  padding: 0 20px 10px 80px;
}
footer {
  display: none;
}
hr {
  margin-bottom: 10px;
  border: 1px solid white;
}
h1 {
  font-size: 2rem;
}
h2 {
  font-size: 1.7777777rem;
  font-weight: bold;
  margin-bottom: 12px;
  border-bottom: 2px solid white;
  letter-spacing: 2px;
  text-transform: uppercase;
}
h3 {
  font-size: 1.5rem;
  margin-bottom: 12px;
}
h4 {
  font-size: 1.3rem;
  margin-top: 0px;
  margin-bottom: 10px;
}
table {
  border: 2px solid var(--table-border-color);
  border-collapse: collapse;
  margin: 0 auto;
  align: left;
}
table th {
  text-align: left;
  background-color: var(--light-blue);
}
table th a {
  color: white;
}
table th.orderable:not(.asc):after {
  content: "\25B4";
}
table th.orderable.asc:after {
  content: "\25B4";
  padding-left: 1px;
  color: var(--orange);
}
table th.orderable.desc:after {
  content: "\25BE";
  padding-left: 1px;
  color: var(--orange);
}
/*table tr {
  border-bottom: 1px solid var(--table-border-color);
}
*/
table th,
table td {
  padding: 10px;
}
table.contact_form {
  border: None;
}
table.contact_form tr {
  border-bottom: None;
}
table.contact_form th {
  background-color: transparent;
}
.form_buttons  {
  color: var(--medium-blue);
}
.bold {
  font-weight: bold;
}
.not-bold {
  font-weight: normal;
}
.italic {
  font-style: italic;
}
.center {
  text-align: center;
}
.smaller {
  font-size: .9rem;
}
.bigger {
  font-size: 1.1rem;
}
.errorlist {
  color: var(--orange);
  list-style-type: none;
}
.errorlist > li {
  margin-left: -40px;
}
.required label:after {
  content: "*";
  color: var(--orange);
}
.download:after {
  content: "\2193";
  padding-left: 1px;
  color: hsl(0, 0%, 85%);
  text-decoration: none;
}
.past_meetings {
  border-collapse: collapse;
  min-width: 400px;
}
.past_meetings tr {
  border-top: none;
  border-bottom: none;
}
.past_meetings tr.first {
  border-top: 1px solid var(--table-border-color);
  border-bottom: 1px solid var(--table-border-color);
}
.past_meetings tr.first:not(.current-year):hover {
  background-color: var(--table-border-color);
}
.past_meetings td {
  width: 75px;
}
.past_meetings td.current-year {
  padding: 15px;
  font-weight: bold;
}
.past_meetings tr.first:not(.current-year) td {
  padding: 0;
}
/* classes related to toggle display of prior year meeting info */
.past_meetings .collapsible {
  display: none;
}
.past_meetings td:first-child {
  padding-left: 25px;
}
button.toggleDisplay {
  border: none;
  text-decoration: none;
  background-color: inherit;
  color: var(--white-blue);
  width: 100%;
  padding: 15px;
  margin: 0;
  text-align: left;
  font-size: 1rem;
}
.toggleDisplay:hover {
  color:white;
}
.toggleDisplay:after {
  content: "\002B";
  color: var(--white-blue);
  font-size: 1.5rem;
  float: right;
  vertical-align: bottom;
  display: inline-block;
}
.toggleDisplay:hover:after {
  color: white;
}
.toggleDisplay:active, .toggleDisplay:focus {
  outline: none;
}
.minus:after {
  content: "\2212";
}
/* end */

.resources {
  float: left;
}
.resources tr {
  border-bottom: 1px solid var(--table-border-color);
}
.resources td[data-th="Product Name"] {
  min-width: 175px;
}
.resources td[data-th="Publication Date"] {
  min-width: 100px;
}
.resources td[data-th="Program Name"] {
  min-width: 200px;
}
.resources td[data-th="Due Date"] {
  min-width: 100px;
}
.resources td[data-th="Source"] {
  min-width: 125px;
}
table.partner_orgs {
  border: 0;
}
table.partner_orgs td {
  width: 50%;
  vertical-align: top;
}
/* Responsive layout */
@media screen and (max-width: 975px) and (min-width: 768px) {
  header .cjtf_logo img {
    width: 375px;
  }
  header .logos img {
    width: 90px;
  }
  header .search input {
    width: 155px;
  }
}
@media screen and (max-width: 768px) {
  body {
    padding: 0px;
    margin: 0px;
    grid-template-columns: auto auto;
    grid-template-areas: "header header" "main main" "footer footer";
  }
  header {
    margin-left: 20px;
    margin-right: 20px;
    grid-area: header;
    display: grid;
    grid-gap: 5px;
    grid-template-columns: auto auto;
    grid-template-areas: "search nav" "logo logo";
  }
  header .cjtf_logo {
    grid-area: logo;
    padding-bottom: 10px;
  }
  header .cjtf_logo img {
    width: 100%;
    min-width: 300px;
  }
  header .search {
    grid-area: search;
    justify-self: start;
    padding-top: 8px;
    padding-bottom: 20px;
  }
  header .logos {
    display: none;
  }
  nav {
    grid-area: nav;
    justify-self: end;
    padding-top: 0;
    z-index: 99;
  }
  nav .opener,
  nav .closer {
    display: block;
    border: none;
    font-size: 2rem;
    background: transparent;
    padding-right: 0px;
  }
  nav ul {
    display: grid;
    justify-items: end;
    position: fixed;
    right: -4px;
    top: 0;
    width: 0;
    height: 100vh;
    overflow-x: hidden;
    line-height: 1.2;
    font-size: 1rem;
    transition: all 400ms;
    padding-bottom: 5px;
    padding-top: 8px;
    white-space: nowrap;
    background-color: var(--medium-blue);
    border: 2px solid var(--dark-gray);
  }
  nav ul.show {
    width: 225px;
  }
  nav ul li {
    margin-right: 15px;
    margin-left: 5px;
  }
  nav ul li:not(:last-child):not(:first-child):after {
    content: none;
    padding-left: 0;
  }
  nav ul li:hover > ul {
    display: none;
  }
  nav ul li ul {
    display: hidden;
  }
  nav ul a {
    text-decoration: none;
    color: white;
  }
  nav ul a:hover {
    color: var(--orange);
  }
  nav ul a.active {
    color: var(--orange);
    font-weight: bold;
  }
  nav ul a.active:hover {
    color: var(--orange);
  }
  main.home {
    grid-template-columns: 1fr;
    grid-template-areas: "mission" "col1" "col2";
  }
  main.home .mission-text {
    position: relative;
    font-size: 1rem;
    padding: 10px;
    width: calc(100% - 20px);
    background: var(--dark-gray);
  }
  main.default {
    grid-template-columns: 1fr;
    grid-template-areas: "col1" "col2";
  }
  main .col1,
  main .col2,
  main .full {
    padding: 0 20px 10px 20px;
  }
  main.default .col2 {
    padding-top: 0;
  }
  footer {
    display: block;
    grid-area: footer;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 25px;
  }
  footer img {
    width: 125px;
  }
  .past_meetings {
    font-size: 0.8rem;
  }
  .responsive_table th {
    display: none;
  }
  .responsive_table td {
    display: block;
  }
  .responsive_table td:before {
    content: attr(data-th) ": ";
    display: inline;
    font-weight: bold;
  }
  .responsive_table td:first-child {
    padding-top: 15px;
  }
  .responsive_table tr:first-child {
    border-top: 2px solid var(--table-border-color);
  }
}

